<resources>
    <string name="app_name">不良网站过滤系统</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">输入密码</string>
    <string name="login">注册登录</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">Email地址不正确</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">Email不能为空</string>

    <string name="go">前往</string>
    <string name="filter_on">开启过滤</string>
    <string name="filter_off">关闭过滤</string>
    <string name="web_filter">网页过滤</string>
    <string name="content_detected">检测到%s，即将关闭网页...</string>
    <string name="filter_setting">自定义过滤</string>
    <string name="site_detector">网站检测</string>
    <string name="hint_black_list">检测速度快，可靠性高，存在部分网址没有收录情况。</string>
    <string name="hint_content_detect">针对网站上文本图片综合分析，检测速度较慢。</string>
    <string name="hint_url">在此输入待检测网站URL</string>
    <string name="ok">确认</string>
    <string name="black_list">黑白名单检测</string>
    <string name="content_detect">网站内容检测</string>
    <string name="count">共%d条</string>

    <string name="web_black_list">网址黑名单</string>
    <string name="key_word">关键字</string>
    <string name="add">添加%s</string>
    <string name="placeholder">在此输入%s</string>
    <string name="cancel">取消</string>
</resources>
